--- a/src/app/00078-GestionPlanillas/WebApp/WebApp.csproj
+++ b/src/app/00078-GestionPlanillas/WebApp/WebApp.csproj
@@ -127,7 +127,9 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\ActividadesMetasController.cs" />
     <Compile Include="Controllers\ConceptosController.cs" />
+    <Compile Include="Controllers\DependenciasController.cs" />
     <Compile Include="Controllers\PeriodosController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Controllers\ValoresExternosController.cs" />
@@ -144,6 +146,7 @@
     <Compile Include="Models\ConceptoModel.cs" />
     <Compile Include="Models\ConceptoAsignadoPlantillaModel.cs" />
     <Compile Include="Models\ConceptoReferenciaModel.cs" />
+    <Compile Include="Models\DependenciaModel.cs" />
     <Compile Include="Models\DocenteModel.cs" />
     <Compile Include="Models\Mapper.cs" />
     <Compile Include="Models\MesModel.cs" />
@@ -470,7 +473,9 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\ActividadesMetas\" />
     <Folder Include="Views\Default\" />
+    <Folder Include="Views\Dependencias\" />
     <Folder Include="Views\General\" />
   </ItemGroup>
   <ItemGroup>
