--- a/src/app/00078-GestionPlanillas/Domain/Domain.csproj
+++ b/src/app/00078-GestionPlanillas/Domain/Domain.csproj
@@ -66,6 +66,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\ActividadDTO.cs" />
+    <Compile Include="Entities\ActividadEntity.cs" />
     <Compile Include="Entities\AfpDTO.cs" />
     <Compile Include="Entities\BancoDTO.cs" />
     <Compile Include="Entities\CategoriaDocenteDTO.cs" />
@@ -74,6 +76,8 @@
     <Compile Include="Entities\ConceptoEntity.cs" />
     <Compile Include="Entities\ConceptoAsignadoPlantillaDTO.cs" />
     <Compile Include="Entities\DependenciaEntity.cs" />
+    <Compile Include="Entities\MetaDTO.cs" />
+    <Compile Include="Entities\MetaEntity.cs" />
     <Compile Include="Entities\PeriodoDTO.cs" />
     <Compile Include="Entities\PeriodoEntity.cs" />
     <Compile Include="Entities\ProveedorDTO.cs" />
@@ -117,6 +121,7 @@
     <Compile Include="Helpers\Response.cs" />
     <Compile Include="Helpers\WebConfigParams.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\IActividadService.cs" />
     <Compile Include="Services\ICategoriaDocenteService.cs" />
     <Compile Include="Services\ICategoriaPlanillaService.cs" />
     <Compile Include="Services\IConceptoService.cs" />
@@ -129,6 +134,8 @@
     <Compile Include="Services\IEstadoService.cs" />
     <Compile Include="Services\IHorasDocenteService.cs" />
     <Compile Include="Services\ILecturaArchivoService.cs" />
+    <Compile Include="Services\IMetaService.cs" />
+    <Compile Include="Services\Implementations\ActividadService.cs" />
     <Compile Include="Services\Implementations\AdministrativoService.cs" />
     <Compile Include="Services\Implementations\AfpService.cs" />
     <Compile Include="Services\Implementations\BancoService.cs" />
@@ -142,6 +149,7 @@
     <Compile Include="Services\Implementations\GrupoOcupacionalService.cs" />
     <Compile Include="Services\Implementations\HorasDocenteService.cs" />
     <Compile Include="Services\Implementations\LecturaArchivoExcelService.cs" />
+    <Compile Include="Services\Implementations\MetaService.cs" />
     <Compile Include="Services\Implementations\NivelRemunerativoService.cs" />
     <Compile Include="Services\Implementations\PeriodoService.cs" />
     <Compile Include="Services\Implementations\PersonaService.cs" />
