--- a/src/app/00078-GestionPlanillas/WebApp/WebApp.csproj
+++ b/src/app/00078-GestionPlanillas/WebApp/WebApp.csproj
@@ -146,6 +146,7 @@
     <Compile Include="Models\ConceptoModel.cs" />
     <Compile Include="Models\ConceptoAsignadoPlantillaModel.cs" />
     <Compile Include="Models\ConceptoReferenciaModel.cs" />
+    <Compile Include="Models\DepActividadMetaModel.cs" />
     <Compile Include="Models\DependenciaModel.cs" />
     <Compile Include="Models\DocenteModel.cs" />
     <Compile Include="Models\Mapper.cs" />
@@ -160,6 +161,8 @@
     <Compile Include="Models\UsuarioModel.cs" />
     <Compile Include="Models\ValorExternoConceptoModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServiceFacade\IDepActividadMetaServiceFacade.cs" />
+    <Compile Include="ServiceFacade\Implementations\DepActividadMetaServiceFacade.cs" />
     <Compile Include="ServiceFacade\Implementations\RolServiceFacade.cs" />
     <Compile Include="ServiceFacade\Implementations\UsuarioServiceFacade.cs" />
     <Compile Include="ServiceFacade\Implementations\ValorExternoConceptoServiceFacade.cs" />
@@ -473,12 +476,13 @@
     <Content Include="Views\Dependencias\Index.cshtml" />
     <Content Include="Views\Dependencias\_MsgRegistrarDependencia.cshtml" />
     <Content Include="Views\Dependencias\_MantenimientoDependencia.cshtml" />
+    <Content Include="Views\ActividadesMetas\Index.cshtml" />
+    <Content Include="Views\ActividadesMetas\_MsgRegistrarActividadMeta.cshtml" />
+    <Content Include="Views\ActividadesMetas\_MantenimientoActividadMeta.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\ActividadesMetas\" />
     <Folder Include="Views\Default\" />
-    <Folder Include="Views\General\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
