--- a/src/app/00078-GestionPlanillas/WebApp/WebApp.csproj
+++ b/src/app/00078-GestionPlanillas/WebApp/WebApp.csproj
@@ -127,7 +127,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
-    <Compile Include="Controllers\ActividadesMetasController.cs" />
+    <Compile Include="Controllers\DepActividadesMetasController.cs" />
     <Compile Include="Controllers\ConceptosController.cs" />
     <Compile Include="Controllers\DependenciasController.cs" />
     <Compile Include="Controllers\PeriodosController.cs" />
@@ -161,8 +161,12 @@
     <Compile Include="Models\UsuarioModel.cs" />
     <Compile Include="Models\ValorExternoConceptoModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServiceFacade\IActividadServiceFacade.cs" />
     <Compile Include="ServiceFacade\IDepActividadMetaServiceFacade.cs" />
+    <Compile Include="ServiceFacade\IMetaServiceFacade.cs" />
+    <Compile Include="ServiceFacade\Implementations\ActividadServiceFacade.cs" />
     <Compile Include="ServiceFacade\Implementations\DepActividadMetaServiceFacade.cs" />
+    <Compile Include="ServiceFacade\Implementations\MetaServiceFacade.cs" />
     <Compile Include="ServiceFacade\Implementations\RolServiceFacade.cs" />
     <Compile Include="ServiceFacade\Implementations\UsuarioServiceFacade.cs" />
     <Compile Include="ServiceFacade\Implementations\ValorExternoConceptoServiceFacade.cs" />
@@ -476,9 +480,9 @@
     <Content Include="Views\Dependencias\Index.cshtml" />
     <Content Include="Views\Dependencias\_MsgRegistrarDependencia.cshtml" />
     <Content Include="Views\Dependencias\_MantenimientoDependencia.cshtml" />
-    <Content Include="Views\ActividadesMetas\Index.cshtml" />
-    <Content Include="Views\ActividadesMetas\_MsgRegistrarActividadMeta.cshtml" />
-    <Content Include="Views\ActividadesMetas\_MantenimientoActividadMeta.cshtml" />
+    <Content Include="Views\DepActividadesMetas\Index.cshtml" />
+    <Content Include="Views\DepActividadesMetas\_MsgRegistrarDepActividadMeta.cshtml" />
+    <Content Include="Views\DepActividadesMetas\_MantenimientoDepActividadMeta.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
