Avance mantenimento de dependencias y metas

--- a/src/app/00078-GestionPlanillas/Data/Data.csproj
+++ b/src/app/00078-GestionPlanillas/Data/Data.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Tables\TC_Afp.cs" />
     <Compile Include="Tables\TC_Banco.cs" />
     <Compile Include="Tables\TC_CategoriaPlanilla.cs" />
+    <Compile Include="Tables\TC_CategoriaPresupuestal.cs" />
     <Compile Include="Tables\TC_DedicacionDocente.cs" />
     <Compile Include="Tables\TC_Dependencia.cs" />
     <Compile Include="Tables\TC_Estado.cs" />
