--- a/src/app/00078-GestionPlanillas/WebApp/WebApp.csproj
+++ b/src/app/00078-GestionPlanillas/WebApp/WebApp.csproj
@@ -162,9 +162,11 @@
     <Compile Include="Models\ValorExternoConceptoModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceFacade\IActividadServiceFacade.cs" />
+    <Compile Include="ServiceFacade\ICategoriaPresupuestalServiceFacade.cs" />
     <Compile Include="ServiceFacade\IDepActividadMetaServiceFacade.cs" />
     <Compile Include="ServiceFacade\IMetaServiceFacade.cs" />
     <Compile Include="ServiceFacade\Implementations\ActividadServiceFacade.cs" />
+    <Compile Include="ServiceFacade\Implementations\CategoriaPresupuestalServiceFacade.cs" />
     <Compile Include="ServiceFacade\Implementations\DepActividadMetaServiceFacade.cs" />
     <Compile Include="ServiceFacade\Implementations\MetaServiceFacade.cs" />
     <Compile Include="ServiceFacade\Implementations\RolServiceFacade.cs" />
