--- a/src/app/00078-GestionPlanillas/Data/Data.csproj
+++ b/src/app/00078-GestionPlanillas/Data/Data.csproj
@@ -105,13 +105,14 @@
     <Compile Include="Tables\TC_Trabajador_Dependencia.cs" />
     <Compile Include="Tables\TC_Vinculo.cs" />
     <Compile Include="Tables\TR_Periodo.cs" />
+    <Compile Include="Tables\TR_Planilla.cs" />
     <Compile Include="Tables\Webpages_Roles.cs" />
     <Compile Include="Views\VW_Conceptos.cs" />
     <Compile Include="Views\VW_ConceptosAsignados_Plantilla.cs" />
     <Compile Include="Views\VW_ConceptosReferencia_Plantilla.cs" />
     <Compile Include="Views\VW_DepActividadMeta.cs" />
     <Compile Include="Views\VW_PlantillasPlanilla.cs" />
-    <Compile Include="Views\VW_ResumenPlanillaTrabajador.cs" />
+    <Compile Include="Procedures\USP_S_ListarResumenPlanillaTrabajador.cs" />
     <Compile Include="Views\VW_Administrativo.cs" />
     <Compile Include="Views\VW_Docentes.cs" />
     <Compile Include="Views\VW_TrabajadoresCategoriaPlanilla.cs" />
