Avance reporte de actividade y metas

--- a/src/app/00078-GestionPlanillas/Domain/Domain.csproj
+++ b/src/app/00078-GestionPlanillas/Domain/Domain.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Entities\PeriodoEntity.cs" />
     <Compile Include="Entities\ProveedorDTO.cs" />
     <Compile Include="Entities\RolDTO.cs" />
+    <Compile Include="Entities\TotalPlanillaDependenciaDTO.cs" />
     <Compile Include="Entities\UsuarioDTO.cs" />
     <Compile Include="Entities\UsuarioEntity.cs" />
     <Compile Include="Entities\ValorConceptoEntity.cs" />
