Avance reporte resumen SIAF

--- a/src/app/00078-GestionPlanillas/WebApp/WebApp.csproj
+++ b/src/app/00078-GestionPlanillas/WebApp/WebApp.csproj
@@ -497,6 +497,7 @@
     <Content Include="Views\Metas\_MantenimientoMeta.cshtml" />
     <Content Include="Views\Metas\_MsgRegistrarMeta.cshtml" />
     <Content Include="Views\Planillas\TotalDependencia.cshtml" />
+    <Content Include="Views\Planillas\ResumenSIAF.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
