--- a/src/app/00078-GestionPlanillas/Data/Data.csproj
+++ b/src/app/00078-GestionPlanillas/Data/Data.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Procedures\USP_I_RegistrarDepActividadMeta.cs" />
     <Compile Include="Procedures\USP_I_RegistrarDependencia.cs" />
     <Compile Include="Procedures\USP_I_RegistrarMeta.cs" />
+    <Compile Include="Procedures\USP_S_ListarResumenSIAF.cs" />
     <Compile Include="Procedures\USP_S_ListarTotalPlanillaPorDependencia.cs" />
     <Compile Include="Procedures\USP_U_ActualizarActividad.cs" />
     <Compile Include="Procedures\USP_U_ActualizarDepActividadMeta.cs" />
