Avance reporte SIAF con columnas dinámicas.

--- a/src/app/00078-GestionPlanillas/Domain/Domain.csproj
+++ b/src/app/00078-GestionPlanillas/Domain/Domain.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Entities\PeriodoDTO.cs" />
     <Compile Include="Entities\PeriodoEntity.cs" />
     <Compile Include="Entities\ProveedorDTO.cs" />
+    <Compile Include="Entities\ResumenSIAFDTO.cs" />
     <Compile Include="Entities\RolDTO.cs" />
     <Compile Include="Entities\TotalPlanillaDependenciaDTO.cs" />
     <Compile Include="Entities\UsuarioDTO.cs" />
