--- a/src/app/00078-GestionPlanillas/Domain/Domain.csproj
+++ b/src/app/00078-GestionPlanillas/Domain/Domain.csproj
@@ -85,9 +85,10 @@
     <Compile Include="Entities\PeriodoDTO.cs" />
     <Compile Include="Entities\PeriodoEntity.cs" />
     <Compile Include="Entities\ProveedorDTO.cs" />
+    <Compile Include="Entities\ResumenPorActividadDTO.cs" />
     <Compile Include="Entities\ResumenSIAFDTO.cs" />
     <Compile Include="Entities\RolDTO.cs" />
-    <Compile Include="Entities\TotalPlanillaDependenciaDTO.cs" />
+    <Compile Include="Entities\ResumenPorActividadYDependenciaDTO.cs" />
     <Compile Include="Entities\UsuarioDTO.cs" />
     <Compile Include="Entities\UsuarioEntity.cs" />
     <Compile Include="Entities\ValorConceptoEntity.cs" />
@@ -118,6 +119,7 @@
     <Compile Include="Enums\CategoriaPlanilla.cs" />
     <Compile Include="Enums\Estado.cs" />
     <Compile Include="Enums\FormatoArchivo.cs" />
+    <Compile Include="Helpers\Formats.cs" />
     <Compile Include="Enums\Operacion.cs" />
     <Compile Include="Enums\Vinculo.cs" />
     <Compile Include="Helpers\AjaxResponse.cs" />
@@ -127,6 +129,7 @@
     <Compile Include="Helpers\Response.cs" />
     <Compile Include="Helpers\WebConfigParams.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reports\ReporteResumenPorActividadYDependencia.cs" />
     <Compile Include="Services\IActividadService.cs" />
     <Compile Include="Services\ICategoriaDocenteService.cs" />
     <Compile Include="Services\ICategoriaPlanillaService.cs" />
