--- a/src/app/00078-GestionPlanillas/WebApp/WebApp.csproj
+++ b/src/app/00078-GestionPlanillas/WebApp/WebApp.csproj
@@ -133,6 +133,7 @@
     <Compile Include="Controllers\DependenciasController.cs" />
     <Compile Include="Controllers\MetasController.cs" />
     <Compile Include="Controllers\PeriodosController.cs" />
+    <Compile Include="Controllers\ReportesController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Controllers\ValoresExternosController.cs" />
     <Compile Include="Controllers\GeneralController.cs" />
@@ -160,7 +161,6 @@
     <Compile Include="Models\PlantillaPlanillaModel.cs" />
     <Compile Include="Models\ResumenPlanillaTrabajadorModel.cs" />
     <Compile Include="Models\ResumenSIAFModel.cs" />
-    <Compile Include="Models\TotalPlanillaDependenciaModel.cs" />
     <Compile Include="Models\TrabajadorCategoriaPlanillaModel.cs" />
     <Compile Include="Models\TrabajadorModel.cs" />
     <Compile Include="Models\UsersModel.cs" />
@@ -460,7 +460,7 @@
     <Content Include="Views\Shared\_Sidebar.cshtml" />
     <Content Include="Views\Account\Login.cshtml" />
     <Content Include="Views\Trabajadores\Index.cshtml" />
-    <Content Include="Views\Planillas\Resumen.cshtml" />
+    <Content Include="Views\Reportes\ResumenPlanilla.cshtml" />
     <Content Include="Views\Trabajadores\_MantenimientoTrabajador.cshtml" />
     <Content Include="Views\Trabajadores\_MsgRegistrarTrabajador.cshtml" />
     <Content Include="Views\Planillas\Generar.cshtml" />
@@ -497,8 +497,8 @@
     <Content Include="Views\Actividades\_MantenimientoActividad.cshtml" />
     <Content Include="Views\Metas\_MantenimientoMeta.cshtml" />
     <Content Include="Views\Metas\_MsgRegistrarMeta.cshtml" />
-    <Content Include="Views\Planillas\ResumenDependencia.cshtml" />
-    <Content Include="Views\Planillas\ResumenSIAF.cshtml" />
+    <Content Include="Views\Reportes\ResumenActividadYDependencia.cshtml" />
+    <Content Include="Views\Reportes\ResumenSIAF.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
