--- a/src/app/00078-GestionPlanillas/Data/Data.csproj
+++ b/src/app/00078-GestionPlanillas/Data/Data.csproj
@@ -96,6 +96,7 @@
     <Compile Include="Tables\TC_Dependencia.cs" />
     <Compile Include="Tables\TC_Estado.cs" />
     <Compile Include="Tables\TC_GrupoOcupacional.cs" />
+    <Compile Include="Tables\TC_GrupoTrabajo.cs" />
     <Compile Include="Tables\TC_HorasDocente.cs" />
     <Compile Include="Tables\TC_Meta.cs" />
     <Compile Include="Tables\TC_NivelRemunerativo.cs" />
