Avance mantenimiento de categoria de planillas para trabajadores.

--- a/src/app/00078-GestionPlanillas/WebApp/WebApp.csproj
+++ b/src/app/00078-GestionPlanillas/WebApp/WebApp.csproj
@@ -504,6 +504,7 @@
     <Content Include="Views\Reportes\ResumenSIAF.cshtml" />
     <Content Include="Views\Trabajadores\_AsignarCategoriaPlanilla.cshtml" />
     <Content Include="Views\Trabajadores\_MsgAsignarCategoriaPlanilla.cshtml" />
+    <Content Include="Views\Trabajadores\_CategoriasPlanillaAsignadas.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
