--- a/src/app/00078-GestionPlanillas/Data/Data.csproj
+++ b/src/app/00078-GestionPlanillas/Data/Data.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Procedures\USP_I_RegistrarMeta.cs" />
     <Compile Include="Procedures\USP_S_ListarResumenSIAF.cs" />
     <Compile Include="Procedures\USP_S_ListarResumenPorActividadYDependencia.cs" />
+    <Compile Include="Procedures\USP_S_ListarTrabajadoresConPlanilla.cs" />
     <Compile Include="Procedures\USP_U_ActualizarActividad.cs" />
     <Compile Include="Procedures\USP_U_ActualizarTrabajadorCategoriaPlanilla.cs" />
     <Compile Include="Procedures\USP_U_ActualizarDepActividadMeta.cs" />
