--- a/src/app/00078-GestionPlanillas/Domain/Domain.csproj
+++ b/src/app/00078-GestionPlanillas/Domain/Domain.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Entities\RolDTO.cs" />
     <Compile Include="Entities\ResumenPorActividadYDependenciaDTO.cs" />
     <Compile Include="Entities\TrabajadorCategoriaPlanillaEntity.cs" />
+    <Compile Include="Entities\TrabajadorConPlanillaDTO.cs" />
     <Compile Include="Entities\UsuarioDTO.cs" />
     <Compile Include="Entities\UsuarioEntity.cs" />
     <Compile Include="Entities\ValorConceptoEntity.cs" />
