--- a/src/app/00078-GestionPlanillas/Domain/Domain.csproj
+++ b/src/app/00078-GestionPlanillas/Domain/Domain.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Entities\BancoDTO.cs" />
     <Compile Include="Entities\CategoriaDocenteDTO.cs" />
     <Compile Include="Entities\CategoriaPlanillaDTO.cs" />
+    <Compile Include="Entities\CategoriaPlanillaGeneradaParaTrabajadorDTO.cs" />
     <Compile Include="Entities\CategoriaPresupuestalDTO.cs" />
     <Compile Include="Entities\CategoriaPresupuestalEntity.cs" />
     <Compile Include="Entities\ConceptoDTO.cs" />
