Agregado grilla para ver conceptos generados en el detalle  de planilla por trabajador.

--- a/src/app/00078-GestionPlanillas/Domain/Domain.csproj
+++ b/src/app/00078-GestionPlanillas/Domain/Domain.csproj
@@ -125,6 +125,7 @@
     <Compile Include="Enums\CategoriaPlanilla.cs" />
     <Compile Include="Enums\Estado.cs" />
     <Compile Include="Enums\FormatoArchivo.cs" />
+    <Compile Include="Enums\TipoConcepto.cs" />
     <Compile Include="Helpers\Formats.cs" />
     <Compile Include="Enums\Operacion.cs" />
     <Compile Include="Enums\Vinculo.cs" />
