--- a/src/app/00078-GestionPlanillas/Domain/Domain.csproj
+++ b/src/app/00078-GestionPlanillas/Domain/Domain.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Entities\DepActividadMetaEntity.cs" />
     <Compile Include="Entities\DependenciaEntity.cs" />
     <Compile Include="Entities\GrupoTrabajoDTO.cs" />
+    <Compile Include="Entities\GrupoTrabajoEntity.cs" />
     <Compile Include="Entities\MetaDTO.cs" />
     <Compile Include="Entities\MetaEntity.cs" />
     <Compile Include="Entities\PeriodoDTO.cs" />
