--- a/src/app/00078-GestionPlanillas/Data/Data.csproj
+++ b/src/app/00078-GestionPlanillas/Data/Data.csproj
@@ -114,7 +114,9 @@
     <Compile Include="Tables\TC_Persona.cs" />
     <Compile Include="Tables\TC_Proveedor.cs" />
     <Compile Include="Tables\TC_Regimen.cs" />
+    <Compile Include="Tables\TC_Sexo.cs" />
     <Compile Include="Tables\TC_TipoConcepto.cs" />
+    <Compile Include="Tables\TC_TipoCuentaBancaria.cs" />
     <Compile Include="Tables\TC_TipoDocumento.cs" />
     <Compile Include="Tables\TC_Trabajador_Dependencia.cs" />
     <Compile Include="Tables\TC_Vinculo.cs" />
