Actualizado formulario de trabajador.

--- a/src/app/00078-GestionPlanillas/Domain/Domain.csproj
+++ b/src/app/00078-GestionPlanillas/Domain/Domain.csproj
@@ -95,6 +95,7 @@
     <Compile Include="Entities\RolDTO.cs" />
     <Compile Include="Entities\ResumenPorActividadYDependenciaDTO.cs" />
     <Compile Include="Entities\SexoDTO.cs" />
+    <Compile Include="Entities\TipoCuentaBancariaDTO.cs" />
     <Compile Include="Entities\TrabajadorCategoriaPlanillaEntity.cs" />
     <Compile Include="Entities\TrabajadorConPlanillaDTO.cs" />
     <Compile Include="Entities\UsuarioDTO.cs" />
